fix(1.1.0): 优化请求参数信息打印